--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
 
           <div class="col-md-6 col-lg-3">
             <div class="m-1">
-              <h2>Heading</h2>
+              <h2>Heading
+                <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" fill="currentColor" class="bi bi-arrow-down-circle-fill text-primary" viewBox="0 0 16 16">
+                  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                </svg>
+              </h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum culpa quidem delectus voluptatem! Reiciendis, sapiente similique quas mollitia possimus labore et eius quisquam omnis earum molestias dicta accusantium excepturi nobis!</p>
-              <a class="btn btn-primary" href="#">View More</a>
+              <a class="btn btn-primary" href="#" data-bs-toggle="tooltip" data-bs-placement="right" title="Click to read more about.....">View More</a>
             </div>
           </div>
 
@@ -65,32 +69,26 @@
             <div class="m-1">
               <h2>Heading</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum culpa quidem delectus voluptatem! Reiciendis, sapiente similique quas mollitia possimus labore et eius quisquam omnis earum molestias dicta accusantium excepturi nobis!</p>
-              <a class="btn btn-primary" href="#">View More</a>
+              <a class="btn btn-primary" href="#" data-bs-toggle="popover" title="Click here to Read More" data-bs-content="LEarn about all the great documentation available." data-bs-placement="right">View More</a>
             </div>
           </div>
         </div>
       </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+ 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    -->
+    <script>
+      var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+      var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl)
+      })
+
+      var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+      var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+      return new bootstrap.Popover(popoverTriggerEl)
+      })
+    </script>
+    
   </body>
 </html>
